components/car-simulator/manifests/car-simulator-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: car-simulator
  name: car-simulator
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: car-simulator
    deploymentconfig: car-simulator
  sessionAffinity: None
  type: ClusterIP
