components/car-simulator/manifests/car-simulator-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: car-simulator
  annotations:
    haproxy.router.openshift.io/timeout: 10000ms
  name: car-simulator
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: car-simulator
    weight: 100
  wildcardPolicy: None
